最新更新: 2026年2月24日 13時

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Value Information - セール情報</title>
+    <title>Value Information - 超お得なセール品</title>
     <style>
         body {
             background-color: #000000;
@@ -17,19 +17,19 @@
             max-width: 800px;
             margin: 0 auto;
         }
+        header {
+            text-align: center;
+            border-bottom: 2px solid #ffd700;
+            margin-bottom: 40px;
+            padding-bottom: 10px;
+        }
         .site-name {
             font-size: 1.2rem;
-            font-weight: bold;
-            margin-bottom: 10px;
-            text-transform: uppercase;
-            letter-spacing: 2px;
+            letter-spacing: 0.1em;
         }
         h1 {
-            font-size: 1.8rem;
-            border-bottom: 2px solid #ffd700;
-            padding-bottom: 10px;
-            margin-bottom: 40px;
-            text-align: center;
+            font-size: 1.5rem;
+            margin: 10px 0;
         }
         .card {
             background-color: #0a0a0a;
@@ -37,24 +37,28 @@
             border-radius: 12px;
             padding: 25px;
             margin-bottom: 30px;
-            box-shadow: 0 4px 15px rgba(255, 215, 0, 0.1);
+            box-shadow: 0 4px 15px rgba(255, 215, 0, 0.2);
         }
-        h2 {
-            font-size: 1.5rem;
+        .product-title {
+            font-size: 1.4rem;
+            font-weight: bold;
             margin-top: 0;
             margin-bottom: 15px;
+            border-left: 4px solid #ffd700;
+            padding-left: 15px;
         }
         .benefit {
             font-size: 1.1rem;
             font-weight: bold;
-            display: block;
             margin-bottom: 15px;
-            color: #ffffff;
+            display: block;
         }
         .reason {
-            margin-bottom: 25px;
+            font-size: 0.95rem;
+            margin-bottom: 20px;
+            color: #fff; /* 可読性のため説明文は白系に */
         }
-        .button-group {
+        .button-container {
             display: flex;
             gap: 15px;
             flex-wrap: wrap;
@@ -62,85 +66,86 @@
         .btn {
             flex: 1;
             min-width: 150px;
-            padding: 12px 20px;
             text-align: center;
+            padding: 12px;
+            border-radius: 5px;
             text-decoration: none;
             font-weight: bold;
-            border-radius: 6px;
-            transition: all 0.3s ease;
-            cursor: pointer;
+            transition: opacity 0.3s;
+            border: 1px solid #ffd700;
         }
         .btn-amazon {
             background-color: #ffd700;
-            color: #000000;
-            border: 1px solid #ffd700;
-        }
-        .btn-amazon:hover {
-            background-color: #e6c200;
+            color: #000;
         }
         .btn-rakuten {
-            background-color: transparent;
+            background-color: #000;
             color: #ffd700;
-            border: 1px solid #ffd700;
         }
-        .btn-rakuten:hover {
-            background-color: rgba(255, 215, 0, 0.1);
+        .btn:hover {
+            opacity: 0.8;
         }
-        @media (max-width: 600px) {
-            h1 { font-size: 1.4rem; }
-            h2 { font-size: 1.2rem; }
+        footer {
+            text-align: center;
+            font-size: 0.8rem;
+            margin-top: 50px;
+            color: #888;
         }
     </style>
 </head>
 <body>
 
 <div class="container">
-    <div class="site-name">Value Information</div>
-    
-    <h1>【楽天市場・Amazon】2026年2月24日 12時の超お得なセール品！</h1>
+    <header>
+        <div class="site-name">Value Information</div>
+        <h1>【楽天市場・Amazon】2026年2月24日 13時の超お得なセール品！</h1>
+    </header>
 
     <!-- 商品1 -->
     <div class="card">
-        <h2>【45%OFF】ハイエンド・ノイズキャンセリングヘッドホン</h2>
-        <p class="benefit">喧騒を完全に遮断し、どこにいても自分だけの「静寂のコンサートホール」を手に入れる。</p>
+        <h2 class="product-title">【45%OFF】究極の静寂体験！次世代ノイズキャンセリングヘッドホン</h2>
+        <span class="benefit">騒音を消し去り、自分だけの静寂を。</span>
         <p class="reason">
-            最新モデルへの買い替え需要に伴う在庫処分により、過去最安値を大幅に更新しました。<br>
-            この価格で手に入るチャンスは二度となく、日々の通勤や作業の集中力を劇的に変える絶好の機会です。
+            独自のAIチップが周囲の雑音を99%カットし、どこにいても一瞬でプライベートスタジオに変わります。<br>
+            期間限定のタイムセールにつき、過去最安値を更新中の今が手に入れる最大のチャンスです。
         </p>
-        <div class="button-group">
-            <a href="#" class="btn btn-amazon">Amazonで詳細を見る</a>
-            <a href="#" class="btn btn-rakuten">楽天市場で詳細を見る</a>
+        <div class="button-container">
+            <a href="#" class="btn btn-amazon">Amazonで見る</a>
+            <a href="#" class="btn btn-rakuten">楽天市場で見る</a>
         </div>
     </div>
 
     <!-- 商品2 -->
     <div class="card">
-        <h2>【ポイント20倍】次世代ウルトラワイド・ゲーミングモニター</h2>
-        <p class="benefit">視界を覆い尽くす圧倒的な没入感で、ゲームの世界の住人として覚醒する。</p>
+        <h2 class="product-title">【ポイント25倍】健康をデザインする 超薄型スマートウォッチ Pro</h2>
+        <span class="benefit">24時間の体調管理で、毎日を史上最高のコンディションに。</span>
         <p class="reason">
-            楽天お買い物マラソンと連動し、実質価格が市場平均を3万円以上も下回る異常事態となっています。<br>
-            テレワークの生産性向上と究極の娯楽環境を同時に実現できる、今期最大の「買い」アイテムです。
+            睡眠の質からストレスレベルまで可視化することで、あなたのパフォーマンスを劇的に引き上げます。<br>
+            楽天ポイント大幅還元中の今なら、実質価格で最新モデルを驚きの安さで購入可能です。
         </p>
-        <div class="button-group">
-            <a href="#" class="btn btn-amazon">Amazonで詳細を見る</a>
-            <a href="#" class="btn btn-rakuten">楽天市場で詳細を見る</a>
+        <div class="button-container">
+            <a href="#" class="btn btn-amazon">Amazonで見る</a>
+            <a href="#" class="btn btn-rakuten">楽天市場で見る</a>
         </div>
     </div>
 
     <!-- 商品3 -->
     <div class="card">
-        <h2>【30%OFF】超軽量・大容量フラッグシップ・モバイルバッテリー</h2>
-        <p class="benefit">電池残量を気にするストレスから永久に解放され、自由な移動をデザインする。</p>
+        <h2 class="product-title">【30%OFF】作業効率を極限まで高める 4K有機ELポータブルモニター</h2>
+        <span class="benefit">場所を選ばず、プロフェッショナルなデュアルディスプレイ環境を。</span>
         <p class="reason">
-            災害対策への関心が高まる中、Amazonの限定タイムセールにより非常時用としても最適な高性能モデルが特別価格に。<br>
-            ノートPCも急速充電可能なパワーを、ポケットサイズで持ち歩ける贅沢を今すぐ手に入れてください。
+            超軽量・薄型設計でありながら、息を呑むほど美しい色彩がクリエイティブな思考を刺激します。<br>
+            在庫完売が予想される人気モデルのため、セール価格が適用されている今、迷わず確保すべきです。
         </p>
-        <div class="button-group">
-            <a href="#" class="btn btn-amazon">Amazonで詳細を見る</a>
-            <a href="#" class="btn btn-rakuten">楽天市場で詳細を見る</a>
+        <div class="button-container">
+            <a href="#" class="btn btn-amazon">Amazonで見る</a>
+            <a href="#" class="btn btn-rakuten">楽天市場で見る</a>
         </div>
     </div>
 
+    <footer>
+        &copy; 2026 Value Information. All prices are current as of 13:00.
+    </footer>
 </div>
 
 </body>
