--- a/index.html
+++ b/index.html
@@ -17,110 +17,121 @@
             max-width: 800px;
             margin: 0 auto;
         }
-        header {
-            text-align: center;
-            border-bottom: 2px solid #ffd700;
-            padding-bottom: 20px;
-            margin-bottom: 40px;
-        }
         .site-name {
             font-size: 1.2rem;
+            font-weight: bold;
+            margin-bottom: 10px;
+            text-align: center;
             letter-spacing: 2px;
-            text-transform: uppercase;
         }
         h1 {
             font-size: 1.8rem;
-            margin-top: 10px;
+            text-align: center;
+            border-bottom: 2px solid #ffd700;
+            padding-bottom: 15px;
+            margin-bottom: 40px;
         }
         .card {
             background-color: #111111;
             border: 1px solid #ffd700;
-            border-radius: 15px;
-            padding: 30px;
-            box-shadow: 0 0 20px rgba(255, 215, 0, 0.2);
+            border-radius: 10px;
+            padding: 25px;
             margin-bottom: 30px;
+            box-shadow: 0 4px 15px rgba(255, 215, 0, 0.1);
         }
-        h2 {
-            font-size: 1.5rem;
-            border-left: 4px solid #ffd700;
-            padding-left: 15px;
-            margin-bottom: 20px;
-        }
-        .benefit {
-            font-size: 1.2rem;
+        .product-title {
+            font-size: 1.4rem;
             font-weight: bold;
-            margin-bottom: 15px;
+            margin-bottom: 20px;
             display: block;
         }
-        .reason {
-            font-size: 1rem;
-            margin-bottom: 25px;
+        .benefit {
+            font-size: 1.1rem;
+            font-weight: bold;
+            display: block;
+            margin-bottom: 15px;
             color: #ffffff;
         }
-        .button-container {
+        .reason {
+            font-size: 0.95rem;
+            margin-bottom: 25px;
+        }
+        .btn-wrapper {
             display: flex;
             gap: 15px;
             flex-wrap: wrap;
         }
         .btn {
             flex: 1;
-            min-width: 200px;
+            min-width: 150px;
             text-align: center;
-            padding: 15px 20px;
+            padding: 12px 0;
+            border-radius: 5px;
             text-decoration: none;
             font-weight: bold;
-            border-radius: 5px;
-            transition: all 0.3s ease;
-            border: 1px solid #ffd700;
+            transition: opacity 0.3s;
         }
         .btn-amazon {
             background-color: #ffd700;
-            color: #000;
+            color: #000000;
         }
         .btn-rakuten {
-            background-color: transparent;
+            background-color: #000000;
             color: #ffd700;
+            border: 1px solid #ffd700;
         }
         .btn:hover {
             opacity: 0.8;
-            transform: translateY(-2px);
-            box-shadow: 0 5px 15px rgba(255, 215, 0, 0.4);
         }
     </style>
 </head>
 <body>
 
 <div class="container">
-    <header>
-        <div class="site-name">Value Information</div>
-        <h1>【楽天市場・Amazon】2026年2月24日 15時の超お得なセール品！</h1>
-    </header>
+    <div class="site-name">Value Information</div>
+    <h1>【楽天市場・Amazon】2026年2月24日 16時の超お得なセール品！</h1>
 
-    <article class="card">
-        <h2>【50%OFF】次世代型ノイズキャンセリングヘッドホン Quantum Sound Elite</h2>
-        <p class="benefit">騒音を消し去り、自分だけの静寂を。あらゆる場所があなたのプライベートコンサートホールに変わります。</p>
+    <!-- 商品1 -->
+    <div class="card">
+        <span class="product-title">【45%OFF】次世代ノイズキャンセリングヘッドホン Elite Quiet Pro</span>
+        <span class="benefit">騒音を消し去り、自分だけの静寂を。</span>
         <p class="reason">
-            最新のAIチップを搭載したフラッグシップモデルが、発売以来初の半額という歴史的安値を更新中です。<br>
-            楽天ポイント10倍キャンペーンも重なるこの瞬間こそ、最上の音響環境を手に入れる絶好の好機です。
+            過去最安値を大幅に更新した今こそ、最高峰の没入感を手に入れる絶好のチャンスです。<br>
+            この価格設定は本日23:59までの限定となっており、在庫がなくなり次第終了となります。
         </p>
-        <div class="button-container">
-            <a href="#" class="btn btn-amazon">Amazonで詳細を見る</a>
-            <a href="#" class="btn btn-rakuten">楽天市場で詳細を見る</a>
+        <div class="btn-wrapper">
+            <a href="#" class="btn btn-amazon">Amazonで見る</a>
+            <a href="#" class="btn btn-rakuten">楽天市場で見る</a>
         </div>
-    </article>
+    </div>
 
-    <article class="card">
-        <h2>【ポイント20倍】超高速M.4規格 8TB 外付けSSD Pro Max</h2>
-        <p class="benefit">データの重縛から解放され、数秒で数千枚の思い出を同期。クリエイティブな時間を無限に拡張します。</p>
+    <!-- 商品2 -->
+    <div class="card">
+        <span class="product-title">【ポイント20倍】超高速M.2 SSD 4TB Gen5対応モデル</span>
+        <span class="benefit">読み込みの待ち時間をゼロにし、クリエイティビティを加速させる。</span>
         <p class="reason">
-            在庫一掃セールにより、通常価格から実質3万円以上の還元を受けられる異例のポイント設定となっています。<br>
-            クラウド維持費を払い続けるよりも、この圧倒的スピードと容量を今手に入れる方が賢明な投資です。
+            最新規格Gen5の圧倒的なスピードを、実質価格で過去最大級の還元率で手に入れることができます。<br>
+            高騰が続くストレージ市場において、このポイント還元率は他を圧倒するバリューと言えます。
         </p>
-        <div class="button-container">
-            <a href="#" class="btn btn-amazon">Amazonで詳細を見る</a>
-            <a href="#" class="btn btn-rakuten">楽天市場で詳細を見る</a>
+        <div class="btn-wrapper">
+            <a href="#" class="btn btn-amazon">Amazonで見る</a>
+            <a href="#" class="btn btn-rakuten">楽天市場で見る</a>
         </div>
-    </article>
+    </div>
+
+    <!-- 商品3 -->
+    <div class="card">
+        <span class="product-title">【30%OFF】4K 144Hz ゲーミングモニター UltraVision 32</span>
+        <span class="benefit">圧倒的な高精細と滑らかさで、ゲームの世界に命を吹き込む。</span>
+        <p class="reason">
+            プロ仕様のスペックが手の届く価格まで値下がりし、今すぐデスク環境を劇的に進化させられます。<br>
+            タイムセール特価のため、競合他社を圧倒するこの割引額は今回限りの案内となります。
+        </p>
+        <div class="btn-wrapper">
+            <a href="#" class="btn btn-amazon">Amazonで見る</a>
+            <a href="#" class="btn btn-rakuten">楽天市場で見る</a>
+        </div>
+    </div>
 </div>
 
 </body>
