最新更新: 2026年2月24日 17時

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Value Information</title>
+    <title>Value Information - セール情報</title>
     <style>
         body {
             background-color: #000000;
             color: #ffd700;
-            font-family: 'Helvetica Neue', Arial, 'Hiragino Kaku Gothic ProN', 'Hiragino Sans', Meiryo, sans-serif;
+            font-family: 'Helvetica Neue', Arial, "Hiragino Kaku Gothic ProN", "Hiragino Sans", Meiryo, sans-serif;
             margin: 0;
             padding: 20px;
             line-height: 1.6;
@@ -17,121 +17,112 @@
             max-width: 800px;
             margin: 0 auto;
         }
+        header {
+            text-align: center;
+            border-bottom: 2px solid #ffd700;
+            padding-bottom: 20px;
+            margin-bottom: 40px;
+        }
         .site-name {
             font-size: 1.2rem;
-            font-weight: bold;
+            letter-spacing: 0.2em;
+            text-transform: uppercase;
             margin-bottom: 10px;
-            text-align: center;
-            letter-spacing: 2px;
         }
         h1 {
             font-size: 1.8rem;
-            text-align: center;
-            border-bottom: 2px solid #ffd700;
-            padding-bottom: 15px;
-            margin-bottom: 40px;
+            margin: 0;
+            font-weight: bold;
         }
         .card {
             background-color: #111111;
             border: 1px solid #ffd700;
-            border-radius: 10px;
-            padding: 25px;
+            border-radius: 12px;
+            padding: 30px;
             margin-bottom: 30px;
-            box-shadow: 0 4px 15px rgba(255, 215, 0, 0.1);
+            box-shadow: 0 4px 20px rgba(255, 215, 0, 0.1);
         }
-        .product-title {
-            font-size: 1.4rem;
+        .product-heading {
+            font-size: 1.5rem;
             font-weight: bold;
             margin-bottom: 20px;
-            display: block;
+            border-left: 5px solid #ffd700;
+            padding-left: 15px;
         }
         .benefit {
             font-size: 1.1rem;
             font-weight: bold;
-            display: block;
-            margin-bottom: 15px;
             color: #ffffff;
+            margin-bottom: 15px;
+            display: block;
         }
         .reason {
             font-size: 0.95rem;
+            color: #e0e0e0;
             margin-bottom: 25px;
         }
-        .btn-wrapper {
+        .button-container {
             display: flex;
             gap: 15px;
             flex-wrap: wrap;
         }
         .btn {
             flex: 1;
-            min-width: 150px;
             text-align: center;
-            padding: 12px 0;
-            border-radius: 5px;
+            padding: 12px 20px;
+            border-radius: 6px;
             text-decoration: none;
             font-weight: bold;
-            transition: opacity 0.3s;
+            transition: all 0.3s ease;
+            min-width: 160px;
         }
         .btn-amazon {
             background-color: #ffd700;
             color: #000000;
         }
         .btn-rakuten {
-            background-color: #000000;
+            background-color: transparent;
             color: #ffd700;
             border: 1px solid #ffd700;
         }
         .btn:hover {
             opacity: 0.8;
+            transform: translateY(-2px);
+        }
+        @media (max-width: 600px) {
+            h1 { font-size: 1.4rem; }
+            .product-heading { font-size: 1.2rem; }
+            .button-container { flex-direction: column; }
         }
     </style>
 </head>
 <body>
 
 <div class="container">
-    <div class="site-name">Value Information</div>
-    <h1>【楽天市場・Amazon】2026年2月24日 16時の超お得なセール品！</h1>
+    <header>
+        <div class="site-name">Value Information</div>
+        <h1>【楽天市場・Amazon】2026年2月24日 17時の超お得なセール品！</h1>
+    </header>
 
-    <!-- 商品1 -->
-    <div class="card">
-        <span class="product-title">【45%OFF】次世代ノイズキャンセリングヘッドホン Elite Quiet Pro</span>
-        <span class="benefit">騒音を消し去り、自分だけの静寂を。</span>
-        <p class="reason">
-            過去最安値を大幅に更新した今こそ、最高峰の没入感を手に入れる絶好のチャンスです。<br>
-            この価格設定は本日23:59までの限定となっており、在庫がなくなり次第終了となります。
-        </p>
-        <div class="btn-wrapper">
-            <a href="#" class="btn btn-amazon">Amazonで見る</a>
-            <a href="#" class="btn btn-rakuten">楽天市場で見る</a>
+    <article class="card">
+        <div class="product-heading">【45%OFF】次世代ノイズキャンセリングヘッドホン EliteSound Pro</div>
+        <span class="benefit">騒音を消し去り、一瞬で自分だけの極上シアター空間へ。</span>
+        <p class="reason">過去最安値を更新した今、最高級の静寂を手に入れる絶好のチャンスです。<br>この限定価格は在庫がなくなり次第終了となるため、早めの確保を推奨します。</p>
+        <div class="button-container">
+            <a href="#" class="btn btn-amazon">Amazonで詳細を見る</a>
+            <a href="#" class="btn btn-rakuten">楽天市場で詳細を見る</a>
         </div>
-    </div>
+    </article>
 
-    <!-- 商品2 -->
-    <div class="card">
-        <span class="product-title">【ポイント20倍】超高速M.2 SSD 4TB Gen5対応モデル</span>
-        <span class="benefit">読み込みの待ち時間をゼロにし、クリエイティビティを加速させる。</span>
-        <p class="reason">
-            最新規格Gen5の圧倒的なスピードを、実質価格で過去最大級の還元率で手に入れることができます。<br>
-            高騰が続くストレージ市場において、このポイント還元率は他を圧倒するバリューと言えます。
-        </p>
-        <div class="btn-wrapper">
-            <a href="#" class="btn btn-amazon">Amazonで見る</a>
-            <a href="#" class="btn btn-rakuten">楽天市場で見る</a>
+    <article class="card">
+        <div class="product-heading">【ポイント20倍】超高速M.2 SSD 4TB Gen5対応モデル</div>
+        <span class="benefit">待ち時間をゼロへ。あなたのPCがプロ仕様の爆速ワークステーションに進化する。</span>
+        <p class="reason">実質価格が数万円単位で下がるポイント還元祭は、大容量ストレージを買う唯一の正解タイミングです。<br>データ肥大化が進む今、このスペックをこの価格で手に入れられる機会は二度とありません。</p>
+        <div class="button-container">
+            <a href="#" class="btn btn-amazon">Amazonで詳細を見る</a>
+            <a href="#" class="btn btn-rakuten">楽天市場で詳細を見る</a>
         </div>
-    </div>
-
-    <!-- 商品3 -->
-    <div class="card">
-        <span class="product-title">【30%OFF】4K 144Hz ゲーミングモニター UltraVision 32</span>
-        <span class="benefit">圧倒的な高精細と滑らかさで、ゲームの世界に命を吹き込む。</span>
-        <p class="reason">
-            プロ仕様のスペックが手の届く価格まで値下がりし、今すぐデスク環境を劇的に進化させられます。<br>
-            タイムセール特価のため、競合他社を圧倒するこの割引額は今回限りの案内となります。
-        </p>
-        <div class="btn-wrapper">
-            <a href="#" class="btn btn-amazon">Amazonで見る</a>
-            <a href="#" class="btn btn-rakuten">楽天市場で見る</a>
-        </div>
-    </div>
+    </article>
 </div>
 
 </body>
