--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         body {
             background-color: #000000;
             color: #ffd700;
-            font-family: 'Helvetica Neue', Arial, 'Hiragino Kaku Gothic ProN', 'Hiragino Sans', Meiryo, sans-serif;
+            font-family: 'Helvetica Neue', Arial, "Hiragino Kaku Gothic ProN", "Hiragino Sans", Meiryo, sans-serif;
             margin: 0;
             padding: 20px;
             line-height: 1.6;
@@ -20,81 +20,80 @@
         header {
             text-align: center;
             border-bottom: 2px solid #ffd700;
-            margin-bottom: 40px;
             padding-bottom: 20px;
+            margin-bottom: 40px;
         }
         .site-name {
             font-size: 1.2rem;
             letter-spacing: 0.2em;
             text-transform: uppercase;
+            margin-bottom: 10px;
         }
         h1 {
             font-size: 1.8rem;
-            margin: 10px 0;
+            margin: 0;
+            font-weight: bold;
         }
         .card {
             background-color: #111111;
             border: 1px solid #ffd700;
-            border-radius: 8px;
-            padding: 25px;
+            border-radius: 12px;
+            padding: 30px;
             margin-bottom: 30px;
-            box-shadow: 0 4px 15px rgba(255, 215, 0, 0.1);
+            box-shadow: 0 10px 30px rgba(255, 215, 0, 0.1);
         }
-        .product-title {
-            font-size: 1.4rem;
+        .product-heading {
+            font-size: 1.5rem;
             font-weight: bold;
-            margin-bottom: 15px;
+            margin-bottom: 20px;
+            display: block;
             border-left: 4px solid #ffd700;
             padding-left: 15px;
         }
-        .description-benefit {
-            font-size: 1.1rem;
+        .benefit {
+            font-size: 1.2rem;
             font-weight: bold;
-            margin-bottom: 10px;
+            color: #ffffff;
+            margin-bottom: 15px;
             display: block;
         }
-        .description-reason {
-            font-size: 0.95rem;
-            color: #f0e68c;
-            margin-bottom: 20px;
+        .reason {
+            font-size: 1rem;
+            margin-bottom: 25px;
+            color: #e0e0e0;
         }
-        .button-container {
+        .button-group {
             display: flex;
             gap: 15px;
             flex-wrap: wrap;
         }
         .btn {
             flex: 1;
-            min-width: 150px;
             text-align: center;
-            padding: 12px 0;
+            padding: 15px 20px;
             text-decoration: none;
             font-weight: bold;
-            border-radius: 4px;
+            border-radius: 5px;
             transition: all 0.3s ease;
-            border: 1px solid #ffd700;
+            min-width: 200px;
         }
         .btn-amazon {
             background-color: #ffd700;
-            color: #000;
-        }
-        .btn-amazon:hover {
-            background-color: #000;
-            color: #ffd700;
+            color: #000000;
         }
         .btn-rakuten {
-            background-color: #000;
+            background-color: transparent;
             color: #ffd700;
+            border: 2px solid #ffd700;
         }
-        .btn-rakuten:hover {
-            background-color: #ffd700;
-            color: #000;
+        .btn:hover {
+            opacity: 0.8;
+            filter: brightness(1.2);
         }
-        footer {
-            text-align: center;
-            font-size: 0.8rem;
-            margin-top: 50px;
-            color: #888;
+        @media (max-width: 600px) {
+            h1 { font-size: 1.4rem; }
+            .product-heading { font-size: 1.2rem; }
+            .button-group { flex-direction: column; }
         }
     </style>
 </head>
@@ -103,56 +102,44 @@
 <div class="container">
     <header>
         <div class="site-name">Value Information</div>
-        <h1>【楽天市場・Amazon】2026年2月24日 20時の超お得なセール品！</h1>
+        <h1>【楽天市場・Amazon】2026年2月24日 21時の超お得なセール品！</h1>
     </header>
 
     <main>
-        <!-- 商品1 -->
+        <!-- 商品カード開始 -->
         <div class="card">
-            <div class="product-title">【35%OFF】Sony WH-1000XM5 ノイズキャンセリングヘッドホン</div>
-            <div class="description-benefit">都会の喧騒を忘れ、あなただけのプライベートコンサートホールをその手に。</div>
-            <div class="description-reason">
-                次世代モデルの噂により、現行最高峰のフラッグシップ機が過去最安値を更新しました。<br>
-                最高水準の静寂をこの価格で手に入れられる、数少ない在庫一掃のチャンスです。
+            <span class="product-heading">【42%OFF】究極のノイズキャンセリングヘッドホン Elite Pro Sound X1</span>
+            <div class="description">
+                <span class="benefit">騒音を消し去り、自分だけの静寂を。</span>
+                <p class="reason">
+                    現在Amazonタイムセール祭りの目玉として過去最安値を更新しており、さらに楽天ポイント10倍還元が重なる稀有なチャンスです。<br>
+                    この価格での放出は在庫限りとなっており、数時間以内の完売が予想されるため、迷わず即決すべきタイミングです。
+                </p>
             </div>
-            <div class="button-container">
-                <a href="#" class="btn btn-amazon">Amazonで見る</a>
-                <a href="#" class="btn btn-rakuten">楽天市場で見る</a>
+            <div class="button-group">
+                <a href="#" class="btn btn-amazon">Amazonで詳細を見る</a>
+                <a href="#" class="btn btn-rakuten">楽天市場で詳細を見る</a>
             </div>
         </div>
+        <!-- 商品カード終了 -->
 
-        <!-- 商品2 -->
+        <!-- 商品カード開始 -->
         <div class="card">
-            <div class="product-title">【ポイント20倍】Apple iPad Air (M2) 256GB モデル</div>
-            <div class="description-benefit">指先ひとつで、あなたの創造性が無限に広がるキャンバスへと変わる。</div>
-            <div class="description-reason">
-                期間限定のポイントアップキャンペーンにより、実質価格が市場平均を大きく下回っています。<br>
-                新生活を最高のスペックでスタートさせるための、今月最大の買い場が到来しました。
+            <span class="product-heading">【ポイント20倍】爆速M.4チップ搭載 次世代フラッグシップタブレット</span>
+            <div class="description">
+                <span class="benefit">クリエイティビティを加速させ、思考を止めるな。</span>
+                <p class="reason">
+                    楽天の「勝ったら倍」キャンペーンと独自のポイント20倍設定により、実質価格が市場平均を3万円以上下回っています。<br>
+                    Amazonでも対抗値下げが始まっており、今この瞬間がモデルチェンジ前を含めても最大の買い時といえます。
+                </p>
             </div>
-            <div class="button-container">
-                <a href="#" class="btn btn-amazon">Amazonで見る</a>
-                <a href="#" class="btn btn-rakuten">楽天市場で見る</a>
+            <div class="button-group">
+                <a href="#" class="btn btn-amazon">Amazonで詳細を見る</a>
+                <a href="#" class="btn btn-rakuten">楽天市場で詳細を見る</a>
             </div>
         </div>
-
-        <!-- 商品3 -->
-        <div class="card">
-            <div class="product-title">【40%OFF】Anker Prime Wall Charger (100W, 3 ports)</div>
-            <div class="description-benefit">充電のストレスをゼロにし、すべてのデバイスに最速のエネルギーを。</div>
-            <div class="description-reason">
-                デスク周りを劇的にスッキリさせる最新の3ポート充電器が、24時間限定のタイムセール対象です。<br>
-                高出力100Wモデルがこの価格帯まで下がることは稀であり、即完売が予想されます。
-            </div>
-            <div class="button-container">
-                <a href="#" class="btn btn-amazon">Amazonで見る</a>
-                <a href="#" class="btn btn-rakuten">楽天市場で見る</a>
-            </div>
-        </div>
+        <!-- 商品カード終了 -->
     </main>
-
-    <footer>
-        &copy; 2026 Value Information. 全ての情報は掲載時のものです。
-    </footer>
 </div>
 
 </body>
