--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Value Information - 超お得セール情報</title>
+    <title>Value Information - セール情報</title>
     <style>
         body {
             background-color: #000000;
@@ -17,22 +17,20 @@
             max-width: 800px;
             margin: 0 auto;
         }
+        header {
+            text-align: center;
+            border-bottom: 2px solid #ffd700;
+            padding-bottom: 10px;
+            margin-bottom: 30px;
+        }
         .site-name {
             font-size: 1.2rem;
-            font-weight: bold;
-            text-transform: uppercase;
             letter-spacing: 2px;
-            margin-bottom: 10px;
-            border-bottom: 1px solid #ffd700;
-            display: inline-block;
+            margin-bottom: 5px;
         }
         h1 {
             font-size: 1.8rem;
-            text-align: center;
-            margin: 40px 0;
-            padding: 10px;
-            border: 2px solid #ffd700;
-            background: rgba(255, 215, 0, 0.1);
+            margin: 10px 0;
         }
         .card {
             background-color: #111111;
@@ -40,38 +38,34 @@
             border-radius: 12px;
             padding: 25px;
             margin-bottom: 30px;
-            box-shadow: 0 4px 15px rgba(255, 215, 0, 0.2);
-            transition: transform 0.3s ease;
-        }
-        .card:hover {
-            transform: translateY(-5px);
+            box-shadow: 0 4px 15px rgba(255, 215, 0, 0.1);
         }
         .product-title {
-            font-size: 1.4rem;
+            font-size: 1.5rem;
             font-weight: bold;
+            margin-bottom: 15px;
+            display: block;
+        }
+        .benefit {
+            font-size: 1.2rem;
+            font-weight: bold;
+            display: block;
             margin-bottom: 15px;
             border-left: 4px solid #ffd700;
             padding-left: 15px;
         }
-        .benefit {
-            font-size: 1.1rem;
-            font-weight: bold;
-            margin-bottom: 15px;
-            color: #ffffff;
-        }
         .reason {
-            font-size: 0.95rem;
-            margin-bottom: 20px;
+            margin-bottom: 25px;
         }
-        .button-group {
+        .btn-container {
             display: flex;
             gap: 15px;
             flex-wrap: wrap;
         }
         .btn {
             flex: 1;
-            min-width: 150px;
-            padding: 12px;
+            min-width: 200px;
+            padding: 12px 20px;
             text-align: center;
             text-decoration: none;
             font-weight: bold;
@@ -79,77 +73,71 @@
             transition: opacity 0.3s;
         }
         .btn-amazon {
-            background-color: #ffd700;
-            color: #000;
+            background-color: #ff9900;
+            color: #000000;
         }
         .btn-rakuten {
-            background-color: transparent;
-            color: #ffd700;
-            border: 1px solid #ffd700;
+            background-color: #bf0000;
+            color: #ffffff;
         }
         .btn:hover {
             opacity: 0.8;
         }
-        footer {
-            text-align: center;
-            font-size: 0.8rem;
-            margin-top: 50px;
-            color: #888;
+        @media (max-width: 600px) {
+            h1 { font-size: 1.4rem; }
+            .product-title { font-size: 1.2rem; }
         }
     </style>
 </head>
 <body>
 
 <div class="container">
-    <div class="site-name">Value Information</div>
-    
-    <h1>【楽天市場・Amazon】2026年2月25日 4時の超お得なセール品！</h1>
+    <header>
+        <div class="site-name">Value Information</div>
+        <h1>【楽天市場・Amazon】2026年2月25日 6時の超お得なセール品！</h1>
+    </header>
 
-    <!-- 商品カード1 -->
+    <!-- 商品1 -->
     <div class="card">
-        <div class="product-title">【45%OFF】次世代AI搭載 ノイズキャンセリングヘッドホン Z-Pro</div>
-        <p class="benefit">騒音を消し去り、自分だけの静寂を。</p>
-        <p class="reason">
-            最新のAIチップを搭載したフラッグシップモデルが、24時間限定で過去最安値を更新しました。<br>
-            テレワークの集中力アップと、極上の音楽体験をこの価格で手に入れる最後のチャンスです。
-        </p>
-        <div class="button-group">
+        <span class="product-title">【45%OFF】次世代ノイズキャンセリングヘッドホン Ultra ANC</span>
+        <span class="benefit">騒音を消し去り、自分だけの静寂を。</span>
+        <div class="reason">
+            過去最安値を更新した今、最高峰の音質を手の届く価格で手に入れる絶好のチャンスです。<br>
+            限定クーポンは数時間で終了するため、後悔する前にカートに入れることをお勧めします。
+        </div>
+        <div class="btn-container">
             <a href="#" class="btn btn-amazon">Amazonでチェック</a>
             <a href="#" class="btn btn-rakuten">楽天市場でチェック</a>
         </div>
     </div>
 
-    <!-- 商品カード2 -->
+    <!-- 商品2 -->
     <div class="card">
-        <div class="product-title">【20%ポイント還元】超軽量12インチ 4K有機ELタブレット AirTab</div>
-        <p class="benefit">カバンの中の映画館。どこでも圧倒的な映像美を。 </p>
-        <p class="reason">
-            先行予約分のみに適用されるポイント還元率が、本日未明からさらに5%上乗せされました。<br>
-            実質価格は型落ちモデル以下となっており、午前中には在庫切れが予想されます。
-        </p>
-        <div class="button-group">
+        <span class="product-title">【ポイント20倍】フラッグシップ・タブレット Pro Max 13インチ</span>
+        <span class="benefit">カバンの中に、プロ仕様のクリエイティブスタジオを。</span>
+        <div class="reason">
+            実質価格が他店を圧倒しており、付与されるポイントだけで周辺アクセサリーが揃う異次元の還元率です。<br>
+            新生活シーズンを前に在庫が急減しているため、即断即決がスマートな選択となります。
+        </div>
+        <div class="btn-container">
             <a href="#" class="btn btn-amazon">Amazonでチェック</a>
             <a href="#" class="btn btn-rakuten">楽天市場でチェック</a>
         </div>
     </div>
 
-    <!-- 商品カード3 -->
+    <!-- 商品3 -->
     <div class="card">
-        <div class="product-title">【35%OFF】睡眠解析特化型 スマートウォッチ HealthCore v4</div>
-        <p class="benefit">毎朝、最高の目覚めで人生のパフォーマンスを最大化する。</p>
-        <p class="reason">
-            睡眠の質を可視化し、パーソナライズされた改善案を提示する最新モデルがタイムセールの対象に。<br>
-            健康投資としてのコスパは間違いなくNo.1。2026年上半期のベストバイ候補です。
-        </p>
-        <div class="button-group">
+        <span class="product-title">【30%OFF】スマートウォッチ Elite Series 5</span>
+        <span class="benefit">健康管理を自動化し、最高の体調とパフォーマンスを。</span>
+        <div class="reason">
+            最新アップデートで睡眠計測の精度が向上し、今ならタイムセール価格で先行入手可能です。<br>
+            この価格帯でサファイアガラス採用モデルが手に入るのは、本日の限定セールのみとなります。
+        </div>
+        <div class="btn-container">
             <a href="#" class="btn btn-amazon">Amazonでチェック</a>
             <a href="#" class="btn btn-rakuten">楽天市場でチェック</a>
         </div>
     </div>
-
-    <footer>
-        &copy; 2026 Value Information. セール価格は投稿時点のものです。
-    </footer>
 </div>
 
 </body>
