--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         body {
             background-color: #000000;
             color: #ffd700;
-            font-family: 'Helvetica Neue', Arial, 'Hiragino Kaku Gothic ProN', 'Hiragino Sans', Meiryo, sans-serif;
+            font-family: 'Helvetica Neue', Arial, "Hiragino Kaku Gothic ProN", "Hiragino Sans", Meiryo, sans-serif;
             margin: 0;
             padding: 20px;
             line-height: 1.6;
@@ -17,20 +17,18 @@
             max-width: 800px;
             margin: 0 auto;
         }
-        header {
-            text-align: center;
-            border-bottom: 2px solid #ffd700;
-            padding-bottom: 10px;
-            margin-bottom: 30px;
-        }
         .site-name {
             font-size: 1.2rem;
-            letter-spacing: 2px;
-            margin-bottom: 5px;
+            font-weight: bold;
+            border-bottom: 2px solid #ffd700;
+            display: inline-block;
+            margin-bottom: 20px;
         }
         h1 {
+            text-align: center;
             font-size: 1.8rem;
-            margin: 10px 0;
+            margin-bottom: 40px;
+            text-shadow: 0 0 10px rgba(255, 215, 0, 0.3);
         }
         .card {
             background-color: #111111;
@@ -38,106 +36,110 @@
             border-radius: 12px;
             padding: 25px;
             margin-bottom: 30px;
-            box-shadow: 0 4px 15px rgba(255, 215, 0, 0.1);
+            box-shadow: 0 4px 20px rgba(255, 215, 0, 0.1);
         }
-        .product-title {
-            font-size: 1.5rem;
-            font-weight: bold;
-            margin-bottom: 15px;
-            display: block;
-        }
-        .benefit {
-            font-size: 1.2rem;
-            font-weight: bold;
-            display: block;
-            margin-bottom: 15px;
+        h2 {
+            font-size: 1.4rem;
+            margin-top: 0;
+            color: #ffd700;
             border-left: 4px solid #ffd700;
             padding-left: 15px;
         }
+        .benefit {
+            font-size: 1.1rem;
+            font-weight: bold;
+            display: block;
+            margin-bottom: 10px;
+            color: #ffffff;
+        }
         .reason {
-            margin-bottom: 25px;
+            font-size: 0.95rem;
+            margin-bottom: 20px;
         }
         .btn-container {
             display: flex;
             gap: 15px;
-            flex-wrap: wrap;
         }
         .btn {
             flex: 1;
-            min-width: 200px;
-            padding: 12px 20px;
             text-align: center;
+            padding: 12px 0;
             text-decoration: none;
             font-weight: bold;
-            border-radius: 5px;
-            transition: opacity 0.3s;
+            border-radius: 6px;
+            transition: all 0.3s ease;
         }
         .btn-amazon {
-            background-color: #ff9900;
+            background-color: #ffd700;
             color: #000000;
         }
         .btn-rakuten {
-            background-color: #bf0000;
-            color: #ffffff;
+            border: 1px solid #ffd700;
+            color: #ffd700;
         }
         .btn:hover {
             opacity: 0.8;
+            filter: brightness(1.2);
         }
         @media (max-width: 600px) {
-            h1 { font-size: 1.4rem; }
-            .product-title { font-size: 1.2rem; }
+            .btn-container {
+                flex-direction: column;
+            }
+            h1 {
+                font-size: 1.4rem;
+            }
         }
     </style>
 </head>
 <body>
 
 <div class="container">
-    <header>
-        <div class="site-name">Value Information</div>
-        <h1>【楽天市場・Amazon】2026年2月25日 6時の超お得なセール品！</h1>
-    </header>
+    <div class="site-name">Value Information</div>
+    
+    <h1>【楽天市場・Amazon】2026年2月25日 7時の超お得なセール品！</h1>
 
     <!-- 商品1 -->
     <div class="card">
-        <span class="product-title">【45%OFF】次世代ノイズキャンセリングヘッドホン Ultra ANC</span>
-        <span class="benefit">騒音を消し去り、自分だけの静寂を。</span>
-        <div class="reason">
-            過去最安値を更新した今、最高峰の音質を手の届く価格で手に入れる絶好のチャンスです。<br>
-            限定クーポンは数時間で終了するため、後悔する前にカートに入れることをお勧めします。
-        </div>
+        <h2>【45%OFF】究極の静寂を手に入れるノイズキャンセリングヘッドホン Pro X</h2>
+        <p class="benefit">騒音を消し去り、あらゆる場所をあなただけの最高の集中空間へ変える。</p>
+        <p class="reason">
+            最新チップ搭載のフラッグシップ機が、期間限定のタイムセールで過去最安値を大幅に更新中です。<br>
+            この割引率は年に一度あるかないかの水準であり、在庫が切れる前の今が絶好の買い時です。
+        </p>
         <div class="btn-container">
             <a href="#" class="btn btn-amazon">Amazonでチェック</a>
-            <a href="#" class="btn btn-rakuten">楽天市場でチェック</a>
+            <a href="#" class="btn btn-rakuten">楽天でチェック</a>
         </div>
     </div>
 
     <!-- 商品2 -->
     <div class="card">
-        <span class="product-title">【ポイント20倍】フラッグシップ・タブレット Pro Max 13インチ</span>
-        <span class="benefit">カバンの中に、プロ仕様のクリエイティブスタジオを。</span>
-        <div class="reason">
-            実質価格が他店を圧倒しており、付与されるポイントだけで周辺アクセサリーが揃う異次元の還元率です。<br>
-            新生活シーズンを前に在庫が急減しているため、即断即決がスマートな選択となります。
-        </div>
+        <h2>【ポイント20倍】全デバイスを爆速充電！超小型200W多ポート充電器</h2>
+        <p class="benefit">充電待ちのイライラから解放され、あなたのデスク周りが驚くほどスマートに整う。</p>
+        <p class="reason">
+            複数デバイスの同時急速充電に対応し、これ一台で旅行や出張の荷物を劇的に減らすことが可能です。<br>
+            楽天ポイントの大幅還元とAmazonのクーポンが重複している今、実質価格で選ぶなら間違いありません。
+        </p>
         <div class="btn-container">
             <a href="#" class="btn btn-amazon">Amazonでチェック</a>
-            <a href="#" class="btn btn-rakuten">楽天市場でチェック</a>
+            <a href="#" class="btn btn-rakuten">楽天でチェック</a>
         </div>
     </div>
 
     <!-- 商品3 -->
     <div class="card">
-        <span class="product-title">【30%OFF】スマートウォッチ Elite Series 5</span>
-        <span class="benefit">健康管理を自動化し、最高の体調とパフォーマンスを。</span>
-        <div class="reason">
-            最新アップデートで睡眠計測の精度が向上し、今ならタイムセール価格で先行入手可能です。<br>
-            この価格帯でサファイアガラス採用モデルが手に入るのは、本日の限定セールのみとなります。
-        </div>
+        <h2>【30%OFF】極上のタイピング体験。メカニカルキーボード Elite Series</h2>
+        <p class="benefit">指先に吸い付くような打鍵感が、毎日のクリエイティブワークを至福の時間へ。 </p>
+        <p class="reason">
+            プロ御用達の高級モデルが異例のセール対象となっており、仕事の生産性を高めたい方に最適です。<br>
+            耐久性に定評がある一生モノのデバイスがこの価格で手に入るチャンスは、本日23:59まで。
+        </p>
         <div class="btn-container">
             <a href="#" class="btn btn-amazon">Amazonでチェック</a>
-            <a href="#" class="btn btn-rakuten">楽天市場でチェック</a>
+            <a href="#" class="btn btn-rakuten">楽天でチェック</a>
         </div>
     </div>
+
 </div>
 
 </body>
