--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Value Information - 超お得なセール品</title>
     <style>
         body {
             background-color: #000000;
@@ -11,136 +10,113 @@
             font-family: 'Helvetica Neue', Arial, 'Hiragino Kaku Gothic ProN', 'Hiragino Sans', Meiryo, sans-serif;
             margin: 0;
             padding: 20px;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
+            line-height: 1.6;
         }
-
+        .container {
+            max-width: 800px;
+            margin: 0 auto;
+        }
         .site-name {
             font-size: 1.2rem;
             font-weight: bold;
             margin-bottom: 10px;
-            letter-spacing: 2px;
+            letter-spacing: 0.05em;
         }
-
         h1 {
             font-size: 1.8rem;
             text-align: center;
             border-bottom: 2px solid #ffd700;
-            padding-bottom: 10px;
+            padding-bottom: 15px;
             margin-bottom: 40px;
-            max-width: 800px;
         }
-
         .card {
-            background-color: #000000;
+            background-color: #0a0a0a;
             border: 1px solid #ffd700;
             border-radius: 12px;
-            padding: 30px;
-            max-width: 600px;
-            width: 100%;
-            box-shadow: 0 0 15px rgba(255, 215, 0, 0.2);
-            box-sizing: border-box;
-            transition: transform 0.3s ease;
+            padding: 25px;
+            margin-bottom: 30px;
+            box-shadow: 0 4px 20px rgba(255, 215, 0, 0.15);
         }
-
-        .card:hover {
-            transform: scale(1.02);
-            box-shadow: 0 0 25px rgba(255, 215, 0, 0.4);
-        }
-
-        .product-title {
-            font-size: 1.5rem;
-            font-weight: bold;
+        h2 {
+            font-size: 1.4rem;
             margin-top: 0;
             margin-bottom: 20px;
-            line-height: 1.4;
-        }
-
-        .description {
-            margin-bottom: 30px;
-        }
-
-        .benefit {
-            font-size: 1.2rem;
-            font-weight: bold;
-            display: block;
-            margin-bottom: 15px;
             border-left: 4px solid #ffd700;
             padding-left: 15px;
         }
-
+        .benefit {
+            font-size: 1.1rem;
+            font-weight: bold;
+            color: #ffffff;
+            margin-bottom: 15px;
+            display: block;
+        }
         .reason {
             font-size: 0.95rem;
-            line-height: 1.8;
-            color: #fff8dc;
+            margin-bottom: 25px;
         }
-
-        .button-container {
-            display: grid;
-            grid-template-columns: 1fr 1fr;
-            gap: 15px;
-        }
-
-        .btn {
+        .button-group {
             display: flex;
-            align-items: center;
-            justify-content: center;
-            padding: 12px;
+            gap: 15px;
+            flex-wrap: wrap;
+        }
+        .btn {
+            flex: 1;
+            min-width: 160px;
+            text-align: center;
+            padding: 12px 20px;
+            border: 1px solid #ffd700;
+            color: #ffd700;
             text-decoration: none;
             font-weight: bold;
             border-radius: 6px;
-            transition: opacity 0.3s;
-            font-size: 0.9rem;
+            transition: all 0.3s ease;
         }
-
-        .btn-amazon {
-            background-color: #ffd700;
-            color: #000;
-        }
-
-        .btn-rakuten {
-            background-color: transparent;
-            color: #ffd700;
-            border: 1px solid #ffd700;
-        }
-
         .btn:hover {
-            opacity: 0.8;
+            background-color: #ffd700;
+            color: #000000;
         }
-
         @media (max-width: 480px) {
-            .button-container {
-                grid-template-columns: 1fr;
-            }
-            h1 {
-                font-size: 1.4rem;
-            }
+            h1 { font-size: 1.4rem; }
+            h2 { font-size: 1.2rem; }
+            .btn { width: 100%; }
         }
     </style>
 </head>
 <body>
 
+<div class="container">
     <div class="site-name">Value Information</div>
-    
-    <h1>【楽天市場・Amazon】2026年2月25日 9時の超お得なセール品！</h1>
+    <h1>【楽天市場・Amazon】2026年2月25日 11時の超お得なセール品！</h1>
 
+    <!-- 商品カード 1 -->
     <div class="card">
-        <div class="product-title">【35%OFF】次世代ノイズキャンセリングイヤホン Ultra Sound X</div>
-        
-        <div class="description">
-            <span class="benefit">騒音を消し去り、自分だけの静寂を。</span>
-            <p class="reason">
-                過去最安値を更新した今こそ、最高級の音響体験を手に入れる絶好のチャンスです。<br>
-                限定在庫のみの特別価格となっており、セール終了後は通常価格へ戻るためお急ぎください。
-            </p>
+        <h2>【35%OFF】究極の没入感 Sony ノイズキャンセリングヘッドホン WH-1000XM5</h2>
+        <span class="benefit">街中の喧騒を完全に遮断し、お気に入りの音楽だけに包まれる至福の移動時間を。</span>
+        <div class="reason">
+            業界最高峰の静寂性能を誇るフラッグシップ機が、過去最安値圏まで一気にプライスダウンしました。<br>
+            この割引率は数ヶ月に一度の好機であり、在庫がなくなる前の「今」がまさに手に入れるべき瞬間です。
         </div>
-
-        <div class="button-container">
-            <a href="#" class="btn btn-amazon">Amazonで見る</a>
-            <a href="#" class="btn btn-rakuten">楽天市場で見る</a>
+        <div class="button-group">
+            <a href="#" class="btn">Amazonで詳細を見る</a>
+            <a href="#" class="btn">楽天市場で詳細を見る</a>
         </div>
     </div>
+
+    <!-- 商品カード 2 -->
+    <div class="card">
+        <h2>【ポイント15倍】爆速M3チップ搭載 MacBook Air 13インチモデル</h2>
+        <span class="benefit">重い作業も涼しい顔で。どこへでも持ち運べる軽さと、限界を知らない処理能力をその手に。</span>
+        <div class="reason">
+            実質的な大幅還元を受けられるポイントアップ祭は、Apple製品を最も賢く購入できる絶好の機会です。<br>
+            円安による再値上げが懸念される中、還元率が最大化されている今、迷わずアップグレードすべきです。
+        </div>
+        <div class="button-group">
+            <a href="#" class="btn">Amazonで詳細を見る</a>
+            <a href="#" class="btn">楽天市場で詳細を見る</a>
+        </div>
+    </div>
+</div>
 
 </body>
 </html>
